LAU replace functional code with more traditional